--- a/shop/index.html
+++ b/shop/index.html
@@ -19,10 +19,10 @@
       rel="stylesheet"
     />
     <title>Shoopers - Shop Your Top Products At Best Prices</title>
+    <script type="module" crossorigin src="./main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
