--- a/shop/index.html
+++ b/shop/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <title>Shoopers - Shop Your Top Products At Best Prices</title>
-    <script type="module" crossorigin src="./main.jsx"></script>
+    <script type="module" crossorigin src="/src/main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
